# cuota

./: README.md  pyproject.toml  streamlit_tax.py
cuota/data/: cuotas2024.csv
cuota/data_classes/: foreign_tax_rules.py  interfaces.py  social_security.py  spanish_tax_rules.py  tax_rules.py
cuota/importers/: import_bandgroup.py  import_tax_data.py
cuota/logic/: calculations.py  comparators.py
cuota/resources/: UK_self-employed_NI2025.csv  cuotas2023.csv  cuotas2024.csv  cuotas2025.csv  cuotas2025.numbers  irpf_tramos2023.csv  social_security_tax_rules_None.pickle  spanish_tax_rules.pickle
data/: Spain_Bases_de_Cotizacion_2020_2024.csv  Spain_Social_Security_Contributions_2020-2024.csv  cuotas2022.csv  cuotas2025.csv  spanish_tax_rules.pickle  uk_employee_NI2025.py  uk_income_tax_2025.csv
docs/source/: api.rst  conf.py  index.rst  usage.rst
jupyter/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  Untitled7.ipynb  autonomo_charts.ipynb  charts.ipynb  comparison.ipynb  developing_plot.ipynb  regimen_general.ipynb  uk-spain-comparison.ipynb  year-on-year-comparison.ipynb
tests/: test_social_security.py  test_tax_rules.py
