[tool.poetry]
name = "cuota"
version = "0.1.0"
description = "tools for estimating social security and income tax payments"
authors = ["Jonathan Mair <jonathan.mair@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
pydantic = "^2.9.2"
pytest = "^8.3.3"
ruff = "^0.7.2"
pre-commit = "^4.0.1"
pandas = "^2.2.3"
streamlit = "^1.40.0"
matplotlib = "^3.9.2"
jupyterlab = "^4.3.0"


[tool.poetry.group.dev.dependencies]
setuptools = {version = "^75.3.0", extras = ["V"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
