[tool.poetry]
name = "cuota"
version = "0.1.0"
description = "tools for estimating social security and income tax payments"
authors = ["Jonathan Mair <jonathan.mair@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["cuota/resources/*"]

[tool.poetry.dependencies]
python = "3.13.0"
pydantic = "^2.9.2"
pytest = "^8.3.3"
ruff = "^0.7.2"
pre-commit = "^4.0.1"
pandas = "^2.2.3"
streamlit = "^1.40.0"
matplotlib = "^3.9.2"
jupyterlab = "^4.3.0"
watchdog = "^6.0.0"
sphinx = "^8.1.3"
pyscaffold = "^4.6"
seaborn = "^0.13.2"
pycurrenciestools = "^1.0.2"
importlib = "^1.0.4"
multipledispatch = "^1.0.0"


[tool.poetry.group.dev.dependencies]
setuptools = {version = "^75.3.0", extras = ["V"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


